--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "scripts": {
     "serve": "live-server public/ --port=8081",
-    "build": "webpack",
-    "start:dev": "webpack serve",
+    "build:dev": "webpack --config webpack.dev.js",
+    "build:prod": "webpack --config webpack.prod.js",
+    "start:dev": "webpack serve --config webpack.dev.js",
     "test": "jest --config=jest.config.json"
   },
   "author": "",
@@ -38,11 +39,13 @@
     "enzyme": "^3.11.0",
     "enzyme-to-json": "^3.6.1",
     "jest": "^26.6.3",
+    "mini-css-extract-plugin": "^1.5.0",
     "raf": "^3.3.2",
     "sass": "^1.32.8",
     "sass-loader": "^11.0.1",
     "webpack": "^5.27.1",
     "webpack-cli": "^4.5.0",
-    "webpack-dev-server": "^3.11.2"
+    "webpack-dev-server": "^3.11.2",
+    "webpack-merge": "^5.7.3"
   }
 }
