--- a/package.json
+++ b/package.json
@@ -8,13 +8,16 @@
     "build:dev": "webpack --config webpack.dev.js",
     "build:prod": "webpack --config webpack.prod.js",
     "start:dev": "webpack serve --config webpack.dev.js",
-    "test": "jest --config=jest.config.json"
+    "test": "jest --config=jest.config.json",
+    "start": "node server/server.js",
+    "heroku-postbuild": "npm run build:prod"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@babel/runtime": "^7.13.10",
     "css-loader": "^5.1.3",
+    "express": "^4.17.1",
     "moment": "^2.29.1",
     "normalize.css": "^8.0.1",
     "react": "^17.0.2",
