--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build:dev": "webpack --config webpack.dev.js",
     "build:prod": "webpack --config webpack.prod.js",
     "start:dev": "webpack serve --config webpack.dev.js",
-    "test": "jest --config=jest.config.json",
+    "test": "cross-env NODE_ENV=test jest --config=jest.config.json",
     "start": "node server/server.js",
     "heroku-postbuild": "npm run build:prod"
   },
@@ -15,8 +15,11 @@
   "license": "ISC",
   "dependencies": {
     "@babel/runtime": "^7.13.10",
+    "@react-firebase/database": "^0.3.11",
     "css-loader": "^5.1.3",
+    "dotenv": "^9.0.0",
     "express": "^4.17.1",
+    "firebase": "^8.4.2",
     "moment": "^2.29.1",
     "normalize.css": "^8.0.1",
     "numeral": "^2.0.6",
@@ -27,6 +30,7 @@
     "react-redux": "^7.2.3",
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "style-loader": "^2.0.0",
     "uuid": "^8.3.2"
   },
@@ -38,12 +42,14 @@
     "@babel/preset-react": "^7.12.13",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.0",
     "babel-loader": "^8.2.2",
+    "cross-env": "^7.0.3",
     "enzyme": "^3.11.0",
     "enzyme-to-json": "^3.6.1",
     "jest": "^26.6.3",
     "mini-css-extract-plugin": "^1.5.0",
     "raf": "^3.3.2",
     "react-test-renderer": "^17.0.2",
+    "redux-mock-store": "^1.5.4",
     "sass": "^1.32.8",
     "sass-loader": "^11.0.1",
     "webpack": "^5.27.1",
