--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^9.0.0",
     "express": "^4.17.1",
     "firebase": "^8.4.2",
+    "history": "^4.10.1",
     "moment": "^2.29.1",
     "normalize.css": "^8.0.1",
     "numeral": "^2.0.6",
