--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@babel/runtime": "^7.13.10",
     "@react-firebase/database": "^0.3.11",
+    "babel-polyfill": "^6.26.0",
     "css-loader": "^5.1.3",
     "dotenv": "^9.0.0",
     "express": "^4.17.1",
@@ -53,6 +54,7 @@
     "redux-mock-store": "^1.5.4",
     "sass": "^1.32.8",
     "sass-loader": "^11.0.1",
+    "url-loader": "^4.1.1",
     "webpack": "^5.27.1",
     "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2",
